--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,5 @@ jsonpickle
 pony
 pymysql
 mysql-connector-python-rf
-lxml
-pytest-allure-adaptor
+lxml-4.6.5-cp310-cp310-win_amd64.whl
 allure-pytest
